--- a/Recipes/Grilled Stuffed Poblanos.html
+++ b/Recipes/Grilled Stuffed Poblanos.html
@@ -52,3 +52,5 @@
                 <li>Lightly oil grill grate over unlit side of grill. Grill stuffed poblanos, covered, until filling is heated through, 5 to 7 minutes.</li>
                 <li>Serve immediately with cheese sauce; pico de gallo; and (if using) cilantro, lime wedges, and/or radishes. Garnish with chili powder.</li>
             </ol>
+            </body>
+            </html>
